--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,15 +1,5 @@
-<!doctype html>
-<html lang="fr">
-  <head>
-    <meta charset="utf-8">
-    <title>Titre de la page</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-  </head>
-  <body>
-    <form action="/answer">
-    <input type="text" name="question">
-    <input type="submit" value="Ask!">
-    </form>
-  </body>
-</html>
+<p>Ask your coach anything</p>
+<form action="/answer">
+  <input type="text" name="question">
+  <input type="submit" value="Ask!">
+</form>
